Removed badge text

--- a/streaming.html
+++ b/streaming.html
@@ -16,7 +16,7 @@
             <h1>
                 <a href="index.html" aria-label="Go Home">
                     <img src="img/FnBLogo_FINAL_800.png" alt="Hypekingfish Logo"/>
-                    <span>Hypekingfish</span>
+                    Hypekingfish</span>
                 </a>
             </h1>
             <button type="button" tabindex="-1" hidden></button>
@@ -48,59 +48,45 @@
             <div class="badge_images">
                 <div>
                     <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-34.png" alt="1 Month Subscriber Badge">
-                    <span>1 Month</span>
                 </div>
                 <div>
                     <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-35.png" alt="2 Month Subscriber Badge">
-                    <span>2 Month</span>
                 </div>
                 <div>
                     <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-36.png" alt="3 Month Subscriber Badge">
-                    <span>3 Months</span>
                 </div>
                 <div>
                     <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-37.png" alt="6 Month Subscriber Badge">
-                    <span>6 Months</span>
                 </div>
                 <div>
                     <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-38.png" alt="9 Month Subscriber Badge">
-                    <span>9 Months</span>
                 </div>
                 <div>
                     <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-39.png" alt="12 Month Subscriber Badge">
-                    <span>1 Year</span>
                 </div>
                 <div>
                     <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-40.png" alt="2 Year Subscriber Badge">
-                    <span>2 Years</span>
                 </div>
                 <div>
                     <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-41.png" alt="3 Year Subscriber Badge">
-                    <span>3 Years</span>
                 </div>
                 <div>
                     <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-42.png" alt="4 Year Subscriber Badge">
-                    <span>4 Years</span>
                 </div>
                 <div>
                     <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-43.png" alt="5 Year Subscriber Badge">
-                    <span>5 Years</span>
                 </div>
                 <div>
                     <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-44.png" alt="6 Year Subscriber Badge">
-                    <span>6 Years</span>
                 </div>
                 <div>
                     <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-45.png" alt="7 Year Subscriber Badge">
-                    <span>7 Years</span>
                 </div>
                 <div>
                     <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-46.png" alt="8 Year Subscriber Badge">
-                    <span>8 Years</span>
                 </div>
                 <div>
                     <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-47.png" alt="9 Year Subscriber Badge">
-                    <span>9 Years</span>
                 </div>
             </div>
         </section>
