Added dono links

--- a/streaming.html
+++ b/streaming.html
@@ -45,50 +45,29 @@
         </div>
         <section class="subscriber_badges">
             <h2>Subscriber Badges</h2>
+            <p>Thank you to all my past and future subscribers</p>
             <div class="badge_images">
-                <div>
                     <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-34.png" alt="1 Month Subscriber Badge">
-                </div>
-                <div>
                     <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-35.png" alt="2 Month Subscriber Badge">
-                </div>
-                <div>
                     <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-36.png" alt="3 Month Subscriber Badge">
-                </div>
-                <div>
                     <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-37.png" alt="6 Month Subscriber Badge">
-                </div>
-                <div>
                     <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-38.png" alt="9 Month Subscriber Badge">
-                </div>
-                <div>
                     <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-39.png" alt="12 Month Subscriber Badge">
-                </div>
-                <div>
                     <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-40.png" alt="2 Year Subscriber Badge">
-                </div>
-                <div>
                     <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-41.png" alt="3 Year Subscriber Badge">
-                </div>
-                <div>
                     <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-42.png" alt="4 Year Subscriber Badge">
-                </div>
-                <div>
                     <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-43.png" alt="5 Year Subscriber Badge">
-                </div>
-                <div>
                     <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-44.png" alt="6 Year Subscriber Badge">
-                </div>
-                <div>
                     <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-45.png" alt="7 Year Subscriber Badge">
-                </div>
-                <div>
                     <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-46.png" alt="8 Year Subscriber Badge">
-                </div>
-                <div>
                     <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-47.png" alt="9 Year Subscriber Badge">
-                </div>
             </div>
+        </section>
+        <section class="donations">
+            <h2>Support the Stream</h2>
+            <p>Love the content? Consider supporting through donations!</p>
+            <a href="https://www.paypal.com/paypalme/hypekingfish" aria-label="PayPal" target="_blank" rel="noopener noreferrer" class="donate-button">Donate via PayPal</a>
+            <a href="https://ko-fi.com/fishnbuckjr02" aria-label="Ko-Fi" target="_blank" rel="noopener noreferrer" class="donate-button">Donate via Ko-Fi</a>
         </section>
         <footer>
             <p><small><img src="img/Progress_Pride_Flag.png"/> Created with passion by Hypekingfish <img src="img/Progress_Pride_Flag.png"/></small></p>
