--- a/streaming.html
+++ b/streaming.html
@@ -75,12 +75,11 @@
         </footer>        
         <section class="social-links">
             <div class="social-links">
-                <a href="https://github.com/[your-actual-username]" aria-label="GitHub" target="_blank" rel="noopener noreferrer" class="social-button">Github</a>
-                <a href="https://twitter.com/fishnbuckjr02" aria-label="Twitter" target="_blank" rel="noopener noreferrer" class="social-button">Twitter</a>
-                <a href="https://youtube.com/yourchannel" aria-label="YouTube" target="_blank" rel="noopener noreferrer" class="social-button">youtube</a>
-                <a href="https://twitch.tv/hypekingfish" aria-label="Twitch" target="_blank" rel="noopener noreferrer" class="social-button">Twitch</a>
-                <a href="https://discord.gg/yourdiscord" aria-label="Discord" target="_blank" rel="noopener noreferrer" class="social-button">Discord</a>
-            </div>
+                <a href="https://twitch.tv/yourchannel" class="social-button"><i class="fa-brands fa-twitch"></i></a>
+                <a href="https://paypal.me/yourlink" class="social-button"><i class="fa-brands fa-paypal"></i></a>
+                <a href="https://twitter.com/yourprofile" class="social-button"><i class="fa-brands fa-twitter"></i></a>
+                <a href="https://discord.gg/yourserver" class="social-button"><i class="fa-brands fa-discord"></i></a>
+            </div>        
         </section>
     </body>
 </html>
