--- a/streaming.html
+++ b/streaming.html
@@ -79,6 +79,7 @@
                 <a href="https://paypal.me/yourlink" class="social-button"><i class="fa-brands fa-paypal"></i></a>
                 <a href="https://twitter.com/yourprofile" class="social-button"><i class="fa-brands fa-twitter"></i></a>
                 <a href="https://discord.gg/yourserver" class="social-button"><i class="fa-brands fa-discord"></i></a>
+                <a href="https://bsky.app/profile/hypekingfish.bsky.social" class="social-button"><i class="fab fa-bluesky"></i></a>
             </div>        
         </section>
     </body>
