--- a/streaming.html
+++ b/streaming.html
@@ -75,18 +75,40 @@
         </footer>        
         <section class="social-links">
             <div class="social-links">
-                <a href="https://bsky.app/profile/hypekingfish.bsky.social" class="social-button"><i class="fab fa-bluesky"></i></a>
-                <a href="https://discord.gg/yourserver" class="social-button"><i class="fa-brands fa-discord"></i></a>
-                <a href="https://github.com/Hypekingfish" class="social-button"><i class="fa-brands fa-github"></i></a>
-                <a href="https://www.instagram.com/yourprofile" class="social-button"><i class="fa-brands fa-instagram"></i></a>
-                <a href="https://paypal.me/yourlink" class="social-button"><i class="fa-brands fa-paypal"></i></a>
-                <a href="https://steamcommunity.com/id/yourprofile" class="social-button"><i class="fa-brands fa-steam"></i></a>
-                <a href="https://tiktok.com/@yourusername" class="social-button"><i class="fa-brands fa-tiktok"></i></a>
-                <a href="https://twitch.tv/yourchannel" class="social-button"><i class="fa-brands fa-twitch"></i></a>
-                <a href="https://twitter.com/yourprofile" class="social-button"><i class="fa-brands fa-twitter"></i></a>
-                <a href="https://www.youtube.com/@yourchannel" class="social-button"><i class="fa-brands fa-youtube"></i></a>
+                <a href="https://bsky.app/profile/hypekingfish.bsky.social" class="social-button" aria-label="Bluesky" target="_blank" rel="noopener noreferrer">
+                    <i class="fab fa-bluesky"></i>
+                </a>
+                <a href="https://discord.gg/yourserver" class="social-button" aria-label="Discord" target="_blank" rel="noopener noreferrer">
+                    <i class="fa-brands fa-discord"></i>
+                </a>
+                <a href="https://github.com/Hypekingfish" class="social-button" aria-label="GitHub" target="_blank" rel="noopener noreferrer">
+                    <i class="fa-brands fa-github"></i>
+                </a>
+                <a href="https://www.instagram.com/yourprofile" class="social-button" aria-label="Instagram" target="_blank" rel="noopener noreferrer">
+                    <i class="fa-brands fa-instagram"></i>
+                </a>
+                <a href="https://ko-fi.com/yourkofi" class="social-button" aria-label="Ko-fi" target="_blank" rel="noopener noreferrer">
+                    <i class="fa-solid fa-mug-hot"></i>
+                </a>
+                <a href="https://paypal.me/yourlink" class="social-button" aria-label="PayPal" target="_blank" rel="noopener noreferrer">
+                    <i class="fa-brands fa-paypal"></i>
+                </a>
+                <a href="https://steamcommunity.com/id/yourprofile" class="social-button" aria-label="Steam" target="_blank" rel="noopener noreferrer">
+                    <i class="fa-brands fa-steam"></i>
+                </a>
+                <a href="https://tiktok.com/@yourusername" class="social-button" aria-label="TikTok" target="_blank" rel="noopener noreferrer">
+                    <i class="fa-brands fa-tiktok"></i>
+                </a>
+                <a href="https://twitch.tv/yourchannel" class="social-button" aria-label="Twitch" target="_blank" rel="noopener noreferrer">
+                    <i class="fa-brands fa-twitch"></i>
+                </a>
+                <a href="https://twitter.com/yourprofile" class="social-button" aria-label="Twitter" target="_blank" rel="noopener noreferrer">
+                    <i class="fa-brands fa-twitter"></i>
+                </a>
+                <a href="https://www.youtube.com/@yourchannel" class="social-button" aria-label="YouTube" target="_blank" rel="noopener noreferrer">
+                    <i class="fa-brands fa-youtube"></i>
+                </a>
             </div>        
         </section>
-        
     </body>
 </html>
