Added Hidden message

--- a/streaming.html
+++ b/streaming.html
@@ -31,6 +31,11 @@
             <h2>Live on Twitch</h2>
             <div id="twitch-embed"></div>
         </section>
+        <section class="mobile-message">
+            <div class="mobile-message">
+                🎥 Twitch embed is hidden on mobile. Watch the stream on <a href="https://www.twitch.tv/YOUR_TWITCH_USERNAME" target="_blank">Twitch</a>!
+            </div>
+        </section>
         <div class="Player">
             <script src="https://embed.twitch.tv/embed/v1.js"></script>
             <script>
