--- a/streaming.html
+++ b/streaming.html
@@ -28,7 +28,7 @@
             </nav>
         </header>
         <section class="twitch-embed">
-            <h2>Live on Twitch</h2>
+            <h2 class="rainbow-text">Live on Twitch</h2>
             <div id="twitch-embed"></div>
         </section>
         <section class="mobile-message">
@@ -49,7 +49,7 @@
             </script>
         </div>
         <section class="subscriber_badges">
-            <h2>Subscriber Badges</h2>
+            <h2 class="rainbow-text">Subscriber Badges</h2>
             <p>Thank you to all my past and future subscribers</p>
             <div class="badge_images">
                     <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-34.png" alt="1 Month Subscriber Badge">
