Added pulse to text

--- a/streaming.html
+++ b/streaming.html
@@ -68,6 +68,26 @@
                     <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-47.png" alt="9 Year Subscriber Badge">
             </div>
         </section>
+        <section class="bit_tier_badges">
+            <h2 class="rainbow-text">Bit Tier badges</h2>
+            <p>Thank you to everyone who has supported me by cheering bits!!!</p>
+            <div class="bit_tier_images">
+                <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-34.png" alt="1 Month Subscriber Badge">
+                <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-35.png" alt="2 Month Subscriber Badge">
+                <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-36.png" alt="3 Month Subscriber Badge">
+                <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-37.png" alt="6 Month Subscriber Badge">
+                <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-38.png" alt="9 Month Subscriber Badge">
+                <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-39.png" alt="12 Month Subscriber Badge">
+                <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-40.png" alt="2 Year Subscriber Badge">
+                <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-41.png" alt="3 Year Subscriber Badge">
+                <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-42.png" alt="4 Year Subscriber Badge">
+                <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-43.png" alt="5 Year Subscriber Badge">
+                <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-44.png" alt="6 Year Subscriber Badge">
+                <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-45.png" alt="7 Year Subscriber Badge">
+                <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-46.png" alt="8 Year Subscriber Badge">
+                <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-47.png" alt="9 Year Subscriber Badge">
+        </div>
+        </section>
         <section class="donations">
             <h2>Support the Stream</h2>
             <p>Love the content? Consider supporting through donations!</p>
