Uncomment when able

--- a/streaming.html
+++ b/streaming.html
@@ -68,7 +68,8 @@
                     <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-47.png" alt="9 Year Subscriber Badge">
             </div>
         </section>
-        <section class="bit_tier_badges">
+        <!-- *Uncomment this out when you get bit badges* -->
+        <!-- <section class="bit_tier_badges"> 
             <h2 class="rainbow-text">Bit Tier badges</h2>
             <p>Thank you to everyone who has supported me by cheering bits!!!</p>
             <div class="bit_tier_images">
@@ -87,7 +88,7 @@
                 <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-46.png" alt="8 Year Subscriber Badge">
                 <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-47.png" alt="9 Year Subscriber Badge">
         </div>
-        </section>
+        </section> -->
         <section class="donations">
             <h2>Support the Stream</h2>
             <p>Love the content? Consider supporting through donations!</p>
