--- a/flying.html
+++ b/flying.html
@@ -29,7 +29,7 @@
             </nav>
         </header>
         <section class="Vatsim-Controlling">
-          <h2>My VATSIM Controller Experience</h2>
+          <h2 class="glitch-text">My VATSIM Controller Experience</h2>
           <div>
             <div class="gallery-grid">
                 <figure>
