--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </header>
         <main>
             <section class="hero">
-                <h2>Welcome to my Digital Space!</h2>
+                <h2 class="typewriter">Welcome to my Digital Space!</h2>
                 <p>Hey there! I'm Hypekingfish - a passionate gamer, flight sim enthusiast, and content creator.</p>
             </section>
 
