--- a/flying.html
+++ b/flying.html
@@ -128,30 +128,46 @@
                     });
             </script>
         </section>
-        <article>
-        </article>
         <footer>
-            <p><small><img src="img/Progress_Pride_Flag.png" alt="Progress Pride Flag"/> Created with passion by Hypekingfish <img src="img/Progress_Pride_Flag.png" alt="Progress Pride Flag"/></small></p>
+            <p><img src="/img/Progress_Pride_Flag.png">Made with passion by Hypekingfish<img src="/img/Progress_Pride_Flag.png"></p>
             <p><small>All content &copy; of Hypekingfish, unless previous copyright exists.</small></p>
         </footer>
         <section class="social-links">
             <div class="social-links">
-                <a href="https://github.com/yourusername" aria-label="GitHub" target="_blank" rel="noopener noreferrer">
-                    <i class="fab fa-github"></i>
+                <a href="https://bsky.app/profile/hypekingfish.bsky.social" class="social-button" aria-label="Bluesky" target="_blank" rel="noopener noreferrer">
+                    <i class="fab fa-bluesky"></i>
                 </a>
-                <a href="https://twitter.com/fishnbuckjr02" aria-label="Twitter" target="_blank" rel="noopener noreferrer">
-                    <i class="fab fa-x-twitter"></i>
+                <a href="https://discord.gg/AxeJ6ryn2x" class="social-button" aria-label="Discord" target="_blank" rel="noopener noreferrer">
+                    <i class="fa-brands fa-discord"></i>
                 </a>
-                <a href="https://youtube.com/yourchannel" aria-label="YouTube" target="_blank" rel="noopener noreferrer">
-                    <i class="fab fa-youtube"></i>
+                <a href="https://github.com/Hypekingfish" class="social-button" aria-label="GitHub" target="_blank" rel="noopener noreferrer">
+                    <i class="fa-brands fa-github"></i>
                 </a>
-                <a href="https://twitch.tv/hypekingfish" aria-label="Twitch" target="_blank" rel="noopener noreferrer">
-                    <i class="fab fa-twitch"></i>
+                <a href="https://www.instagram.com/yourprofile" class="social-button" aria-label="Instagram" target="_blank" rel="noopener noreferrer">
+                    <i class="fa-brands fa-instagram"></i>
                 </a>
-                <a href="https://discord.gg/yourdiscord" aria-label="Discord" target="_blank" rel="noopener noreferrer">
-                    <i class="fab fa-discord"></i>
+                <a href="https://ko-fi.com/yourkofi" class="social-button" aria-label="Ko-fi" target="_blank" rel="noopener noreferrer">
+                    <i class="fa-solid fa-mug-hot"></i>
                 </a>
-            </div>
+                <a href="https://paypal.me/yourlink" class="social-button" aria-label="PayPal" target="_blank" rel="noopener noreferrer">
+                    <i class="fa-brands fa-paypal"></i>
+                </a>
+                <a href="https://steamcommunity.com/id/yourprofile" class="social-button" aria-label="Steam" target="_blank" rel="noopener noreferrer">
+                    <i class="fa-brands fa-steam"></i>
+                </a>
+                <a href="https://tiktok.com/@yourusername" class="social-button" aria-label="TikTok" target="_blank" rel="noopener noreferrer">
+                    <i class="fa-brands fa-tiktok"></i>
+                </a>
+                <a href="https://twitch.tv/yourchannel" class="social-button" aria-label="Twitch" target="_blank" rel="noopener noreferrer">
+                    <i class="fa-brands fa-twitch"></i>
+                </a>
+                <a href="https://twitter.com/yourprofile" class="social-button" aria-label="Twitter" target="_blank" rel="noopener noreferrer">
+                    <i class="fa-brands fa-twitter"></i>
+                </a>
+                <a href="https://www.youtube.com/@yourchannel" class="social-button" aria-label="YouTube" target="_blank" rel="noopener noreferrer">
+                    <i class="fa-brands fa-youtube"></i>
+                </a>
+            </div>        
         </section>
     </body>
 </html>
