--- a/flying.html
+++ b/flying.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8"/>
-        <meta name="viewport" content="width=device-width, intial-scale=1.0" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet"/>
@@ -29,7 +29,9 @@
             </nav>
         </header>
         <section class="Vatsim-Controlling">
-          <h2 class="glitch-text">My VATSIM Controller Experience</h2>
+            <h2 class="glitch-text">
+                <span class="plane-icon">✈️</span> My VATSIM Controller Experience
+            </h2>            
           <div>
             <div class="gallery-grid">
                 <figure>
@@ -158,10 +160,10 @@
                 <a href="https://tiktok.com/@yourusername" class="social-button" aria-label="TikTok" target="_blank" rel="noopener noreferrer">
                     <i class="fa-brands fa-tiktok"></i>
                 </a>
-                <a href="https://twitch.tv/yourchannel" class="social-button" aria-label="Twitch" target="_blank" rel="noopener noreferrer">
+                <a href="https://twitch.tv/hypekingfish" class="social-button" aria-label="Twitch" target="_blank" rel="noopener noreferrer">
                     <i class="fa-brands fa-twitch"></i>
                 </a>
-                <a href="https://twitter.com/yourprofile" class="social-button" aria-label="Twitter" target="_blank" rel="noopener noreferrer">
+                <a href="https://twitter.com/fishnbuckjr02" class="social-button" aria-label="Twitter" target="_blank" rel="noopener noreferrer">
                     <i class="fa-brands fa-twitter"></i>
                 </a>
                 <a href="https://www.youtube.com/@yourchannel" class="social-button" aria-label="YouTube" target="_blank" rel="noopener noreferrer">
