scroll button test

--- a/flying.html
+++ b/flying.html
@@ -10,6 +10,7 @@
         <link href="style.css" rel="stylesheet">
         <link rel="icon" type="image/x-icon" href="/img/FnBLogo_FINAL_800.png">
         <script src="https://kit.fontawesome.com/f78443c527.js" crossorigin="anonymous"></script>
+        <button id="scrollToTopBtn" class="scroll-to-top">↑</button>
     </head>
     <body class="container">
         <header>
@@ -24,10 +25,25 @@
                 <ul>
                     <li><a href="about.html">About</a></li>
                     <li><a href="flying.html">Flying</a></li>
-                    <li><a href="#">Placeholder</a></li>
+                    <li><a href="streaming.html">Streaming</a></li>
                 </ul>
             </nav>
         </header>
+        <!-- <section class="seattle_artcc">
+            <h2><img src="https://zseartcc.org/public/images/seattle_pics/Seattle_edit.png" class="rainbow-box">Seattle ARTCC Overview</h2>
+            <p>Welcome to my Seattle ARTCC experience! Here, you’ll find insights into my air traffic control sessions, real-time VATSIM data, and traffic trends at major ZSE airports.</p>
+            <div class="zse-info">
+                <ul>
+                    <li><strong>Last Controlled:</strong> KSEA Tower</li>
+                    <li><strong>Total Hours:</strong> 120+ on VATSIM</li>
+                    <li><strong>Favorite Airport:</strong> KPDX (Portland Intl)</li>
+                </ul>
+            </div>
+            <div class="aircraft-animation">
+                <span>✈️</span>
+            </div>
+        </section> -->
+        
         <section class="Vatsim-Controlling">
             <h2 class="glitch-text">
                 <span class="plane-icon">✈️</span> My VATSIM Controller Experience
@@ -171,5 +187,7 @@
                 </a>
             </div>        
         </section>
+        <button id="scrollToTopBtn" class="scroll-to-top">↑</button>
+        <script src="scripts/scroll.js"></script>
     </body>
 </html>
