scroll to top fixed

--- a/flying.html
+++ b/flying.html
@@ -187,7 +187,7 @@
                 </a>
             </div>        
         </section>
-        <button id="scrollToTopBtn" class="scroll-to-top">↑</button>
+        <button id="scrollToTopBtn" class="scroll-to-top">Scroll To Top</button>
         <script src="scripts/scroll.js"></script>
     </body>
 </html>
