--- a/flying.html
+++ b/flying.html
@@ -29,20 +29,20 @@
                 </ul>
             </nav>
         </header>
-        <!-- <section class="seattle_artcc">
-            <h2><img src="https://zseartcc.org/public/images/seattle_pics/Seattle_edit.png" class="rainbow-box">Seattle ARTCC Overview</h2>
+        <section class="seattle_artcc">
+            <h2><img src="" class="rainbow-box">Seattle ARTCC Overview</h2>
             <p>Welcome to my Seattle ARTCC experience! Here, you’ll find insights into my air traffic control sessions, real-time VATSIM data, and traffic trends at major ZSE airports.</p>
             <div class="zse-info">
                 <ul>
                     <li><strong>Last Controlled:</strong> KSEA Tower</li>
-                    <li><strong>Total Hours:</strong> 120+ on VATSIM</li>
+                    <p id="hoursDisplay">Total Hours: 0</p>
                     <li><strong>Favorite Airport:</strong> KPDX (Portland Intl)</li>
                 </ul>
             </div>
             <div class="aircraft-animation">
                 <span>✈️</span>
             </div>
-        </section> -->
+        </section>
         
         <section class="Vatsim-Controlling">
             <h2 class="glitch-text">
@@ -187,7 +187,8 @@
                 </a>
             </div>        
         </section>
-        <button id="scrollToTopBtn" class="scroll-to-top">Scroll To Top</button>
+        <button id="scrollToTopBtn" class="scroll-to-top">↑</button>
         <script src="scripts/scroll.js"></script>
+        <script src="scripts/combined.js"></script>
     </body>
 </html>
