changed colors and sizing

--- a/flying.html
+++ b/flying.html
@@ -67,7 +67,7 @@
               <h2>Controller Ratings</h2>
               <ul class="certifications">
                 <li>S1 - Ground Controller - <span class="hours" id="s1-hours">Loading...</span> hours</li>
-                <li>S2 - Tower Controller - <span class="hours" id="s2-hours">Loading...</span> hours</li>
+                <!-- <li>S2 - Tower Controller - <span class="hours" id="s2-hours">Loading...</span> hours</li> -->
                 <!-- <li>S3 - Approach Controller <span class="hours" id="s3-hours">Loading...</span> hours</li> -->
               </ul>
               <h3>Total Controller Hours: <span id="controller-hours">Loading...</span></h3>
