--- a/flying.html
+++ b/flying.html
@@ -39,9 +39,13 @@
                     <li><strong>Favorite Airport:</strong> KPDX (Portland Intl)</li>
                 </ul>
             </div>
-            <div class="aircraft-animation">
-                <span>✈️</span>
-            </div>
+            <div class="flight-container">
+                <div class="airport-label left">PDX (Portland Intl)</div>
+                <div class="flight-path">
+                    <img src="your-plane-image.png" class="plane" alt="Airplane">
+                </div>
+                <div class="airport-label right">SEA (Seattle-Tacoma Intl)</div>
+            </div>                                                            
         </section>
         <section class="Vatsim-Controlling">
             <h2 class="glitch-text">
@@ -138,6 +142,7 @@
         <button id="scrollToTopBtn" class="scroll-to-top">↑</button>
         <script src="scripts/atc.js"></script>
         <script src="scripts/combined.js"></script>
+        <script src="scripts/plane.js"></script>
         <script src="scripts/pilot.js"></script>
         <script src="scripts/scroll.js"></script>
     </body>
