--- a/flying.html
+++ b/flying.html
@@ -21,6 +21,7 @@
                 </a>
             </h1>
             <button type="button" tabindex="-1" hidden></button>
+        </section>
             <nav>
                 <ul>
                     <li><a href="about.html">About</a></li>
@@ -79,7 +80,7 @@
           </div>
         </section>
         <section class="Vatsim-Pilot">
-            <h2>My VATSIM Pilot Experience</h2>
+            <h2 class="neon-text">My VATSIM Pilot Experience</h2>
             <div>
                 <div class="gallery-grid">
                     <figure>
@@ -96,7 +97,7 @@
                     </figure>
                 </div>
             </div>
-            <h3>Total Pilot Hours: <span id="pilot-hours">Loading...</span></h3>            
+            <h3 class="neon-text">Total Pilot Hours: <span id="pilot-hours">Loading...</span></h3>            
         </section>
         <footer>
             <p><img src="/img/Progress_Pride_Flag.png">Made with passion by Hypekingfish<img src="/img/Progress_Pride_Flag.png"></p>
@@ -139,6 +140,7 @@
                 </a>
             </div>        
         </section>
+        <button id="theme-toggle">Toggle Dark Mode</button>
         <button id="scrollToTopBtn" class="scroll-to-top">↑</button>
         <script src="scripts/atc.js"></script>
         <script src="scripts/combined.js"></script>
