--- a/flying.html
+++ b/flying.html
@@ -43,7 +43,7 @@
             <div class="flight-container">
                 <div class="airport-label left">PDX (Portland Intl)</div>
                 <div class="flight-path">
-                    <img src="your-plane-image.png" class="plane" alt="Airplane">
+                    <img src="img/N915AK.png" class="plane" alt="Airplane">
                 </div>
                 <div class="airport-label right">SEA (Seattle-Tacoma Intl)</div>
             </div>                                                            
