--- a/flying.html
+++ b/flying.html
@@ -48,6 +48,25 @@
                 <div class="airport-label right">SEA (Seattle-Tacoma Intl)</div>
             </div>                                                            
         </section>
+        <section class="aircraft-showcase">
+            <h2 class="neon-text">Aircraft Collection</h2>
+            <div class="carousel">
+                <button class="prev">&#10094;</button>
+                <div class="carousel-track">
+                    <div class="aircraft-card active" data-name="Kodiak 100">
+                        <img src="" alt="Kodiak 100">
+                    </div>
+                    <div class="aircraft-card" data-name="Southwest Airlines Freedom One">
+                        <img src="img/Freedom_One.PNG" alt="Southwest Airlines Freedom One">
+                    </div>
+                    <div class="aircraft-card" data-name="Alaska Airlines Honoring Those Who Served">
+                        <img src="img/IFR_Alaska.PNG" alt="Alaska Airlines Honoring Those Who Served">
+                    </div>
+                </div>
+                <button class="next">&#10095;</button>
+            </div>
+            <div class="aircraft-info">Kodiak 100</div>
+        </section>        
         <section class="Vatsim-Controlling">
             <h2 class="glitch-text">
                 <span class="plane-icon">✈️</span> My VATSIM Controller Experience
@@ -143,6 +162,7 @@
         <button id="theme-toggle">Toggle Dark Mode</button>
         <button id="scrollToTopBtn" class="scroll-to-top">↑</button>
         <script src="scripts/atc.js"></script>
+        <script src="scripts/carousel.js"></script>
         <script src="scripts/combined.js"></script>
         <script src="scripts/plane.js"></script>
         <script src="scripts/pilot.js"></script>
