--- a/flying.html
+++ b/flying.html
@@ -35,8 +35,8 @@
             <p>Welcome to my Seattle ARTCC experience! Here, you’ll find insights into my air traffic control sessions, real-time VATSIM data, and traffic trends at major ZSE airports.</p>
             <div class="zse-info">
                 <ul>
-                    <!-- <li><strong>Last Controlled:</strong> KSEA Tower</li> -->
-                    <p><strong>Vatsim Hours:</strong> <span id="vatsim-hours">Loading...</span></p>
+                    <!-- <p><strong>Last Controlled Field:</strong> <span id="">Loading...</span><p> -->
+                    <!-- <p><strong>Vatsim Hours:</strong> <span id="vatsim-hours">Loading...</span></p> -->
                     <li><strong>Favorite Airport:</strong> KPDX (Portland Intl)</li>
                 </ul>
             </div>
