ADDED HOURS BACK

--- a/flying.html
+++ b/flying.html
@@ -36,7 +36,7 @@
             <div class="zse-info">
                 <ul>
                     <!-- <p><strong>Last Controlled Field:</strong> <span id="">Loading...</span><p> -->
-                    <!-- <p><strong>Vatsim Hours:</strong> <span id="vatsim-hours">Loading...</span></p> -->
+                    <p><strong>Total Vatsim Hours:</strong> <span id="vatsim-hours">Loading...</span></p>
                     <li><strong>Favorite Airport:</strong> KPDX (Portland Intl)</li>
                 </ul>
             </div>
