--- a/flying.html
+++ b/flying.html
@@ -48,6 +48,32 @@
                 <div class="airport-label right">SEA (Seattle-Tacoma Intl)</div>
             </div>                                                            
         </section>
+        <!-- <section class="virtual-zse">
+            <h2>
+                <img src="https://zseartcc.org/new/public/images/logo_edit.png"> 
+                Virtual ZSE ARTCC 
+                <img src="https://stats.vatsim.net/img/vatsim_tagline.png">
+            </h2>
+            <p><strong>
+                Interested in joining VATSIM, or looking to enhance your virtual aviation experience? 
+                VATSIM (Virtual Air Traffic Simulation Network) is a global online network where pilots and air 
+                traffic controllers come together to create a realistic, immersive flight simulation environment. 
+                Whether you're a seasoned pilot, a student learning the ropes, or an aviation enthusiast looking 
+                for realistic ATC services, VATSIM offers a dynamic and engaging community.
+            </strong></p>
+            <p><strong>
+                At Virtual ZSE ARTCC (vZSE), we manage the virtual airspace over the Virtual Seattle ARTCC, 
+                covering major airports like Seattle-Tacoma International (SEA), Portland International (PDX). Our controllers are highly trained, providing professional-grade ATC services 
+                to pilots flying in and out of the Pacific Northwest.
+            </strong></p>
+            <p><strong>
+                Join VATSIM today and experience the thrill of virtual aviation with vZSE!
+            </strong></p>
+            <div class="buttons">
+                <a href="https://www.vatsim.net" target="_blank" class="button">Visit VATSIM</a>
+                <a href="https://zseartcc.org" target="_blank" class="button">Visit ZSE ARTCC</a>
+            </div>
+        </section> -->
         <section class="Vatsim-Controlling">
             <h2 class="glitch-text">
                 <span class="plane-icon">✈️</span> My VATSIM Controller Experience
@@ -80,7 +106,7 @@
           </div>
         </section>
         <section class="Vatsim-Pilot">
-            <h2 class="neon-text">My VATSIM Pilot Experience</h2>
+            <h2 class="">My VATSIM Pilot Experience</h2>
             <div>
                 <div class="gallery-grid">
                     <figure>
@@ -97,7 +123,7 @@
                     </figure>
                 </div>
             </div>
-            <h3 class="neon-text">Total Pilot Hours: <span id="pilot-hours">Loading...</span></h3>            
+            <h3 class="">Total Pilot Hours: <span id="pilot-hours">Loading...</span></h3>            
         </section>
         <footer>
             <p><img src="/img/Progress_Pride_Flag.png">Made with passion by Hypekingfish<img src="/img/Progress_Pride_Flag.png"></p>
