--- a/flying.html
+++ b/flying.html
@@ -74,6 +74,28 @@
                 <a href="https://zseartcc.org" target="_blank" class="button">Visit ZSE ARTCC</a>
             </div>
         </section> -->
+        <section class="image-carousel">
+            <div class="carousel-container">
+                <button class="prev" onclick="moveSlide(-1)">&#10094;</button>
+                <div class="carousel-slide">
+                    <div class="carousel-item">
+                        <img src="img/Alaska Airlines/ASA - N487AS.png" class="carousel-image" alt="ATC Session 1">
+                        <div class="caption">Busiest night at SEA Tower!</div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/Alaska Airlines/ASA - N512AS.png" class="carousel-image" alt="ATC Session 2">
+                        <div class="caption">Guiding a heavy 777 to final.</div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/atis3.jpg" class="carousel-image" alt="ATC Session 3">
+                        <div class="caption">Foggy approach into PDX!</div>
+                    </div>
+                </div>
+                <button class="next" onclick="moveSlide(1)">&#10095;</button>
+                <div class="carousel-dots"></div>
+                <div class="progress-bar"></div>
+            </div>
+        </section>
         <section class="Vatsim-Controlling">
             <h2 class="glitch-text">
                 <span class="plane-icon">✈️</span> My VATSIM Controller Experience
